pod-security/disallow-host-namespaces/.chainsaw-test/invalid-host-ipc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-host-ipc
spec:
  hostIPC: true
  containers:
    - name: app
      image: nginx:1.25
