pod-security/disallow-host-namespaces/.chainsaw-test/invalid-host-network.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-host-network
spec:
  hostNetwork: true
  containers:
    - name: app
      image: nginx:1.25
