pod-security/disallow-host-namespaces/.chainsaw-test/invalid-host-pid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-host-pid
spec:
  hostPID: true
  containers:
    - name: app
      image: nginx:1.25
