pod-security/disallow-host-namespaces/.chainsaw-test/valid-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: valid-pod
spec:
  containers:
    - name: app
      image: nginx:1.25
